[metadata]
name = blkswn
author = Walter Eaves
author_email = walter.eaves@mail.ch
summary = Demonstrates and ETL of a web-scrap
home-page = http://github.com/weaves/blkswn
license = MIT
description-file = README.rst
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Development :: Structures :: Recursive
keywords =
    multimedia
    audio
    chapters

[files]
packages =
    blkswn
data_files =
    etc/blkswn = etc/*
    doc/blkswn = contrib/*
[entry_points]
console_scripts =
    blkswn = blkswn.__main__:main
blkswn.config.drivers =
    blkswn = blkswn.cfg.driver:Plain

[pbr]
warnerrors = true
autodoc_tree_index_modules = True
